- Stopped trying to get admin rights on Windows if impossible.
- Various bugs fixed.
- Improved documentation.
- Documentation fixes
- Only support Qt 5 on documentation side as well.
- Renamed settings inside config.xml:
  - UninstallerName renamed to MaintenanceToolName (default value changed to "maintenancetool")
  - UninstallerIniFile renamed to MaintenanceToolIniFile

Thanks go to Sze Howe Koh, Ray Donnelly and Sascha Cunz for contributions.

1.6.0
- No longer requires Xcode command line tools on Mac. (QTBUG-38015)
- Use local encoding to parse executable output in ConsumeOutput.
- Avoid 'Too many open files' on Mac.
- Fixed HTTP proxy settings not having any effect. (QTIFW-498)
- Made it possible to calculate dependencies from script. (QTIFW-503)
- Bugfixes (QTBUG-38343, QTIFW-488)
- Code cleanup

1.5.1
- The checkupdates option handles no-network situations better. (QTIFW-431)
- Fixed random crash while accessing arguments.
- Fixed I18N on Windows.
- Qt5 compatibility fixes.
- Fixed for path handling on Windows.
- Fixed preselection of components from another component.
- Added operationExists method on script side.
- Unified access to the supported schemes.
- Implemented missing setNativeArguments wrapper. (QTIFW-310)
- Fixed banner image not working in dynamic pages. (QTIFW-471)
- Fixed hang when entering wrong sudo password. (QTIFW-409 and QTIFW-451)
- Documentation improvements.
- Updated translations.

Thanks go to Takumi Asaki and Sergey Belyashov for contributions.

1.5.0
- Fixed generation of random temp directory name. (QTIFW-427)
- Now reuses http proxy settings for https.
- Allow a page to force showing the settings button.
- Read qmake output even if it crashed.
- Implemented factory to be able to insert wizard pages dynamically.
- Open a console window (Windows) to show the verbose output. (QTIFW-403)
- Added new settingsoperation.
- Offline installer do not require any temporary space.